--- a/src/Motorselect.css
+++ b/src/Motorselect.css
@@ -1,47 +1,78 @@
 .motorSelect {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    margin: 50px 0;
     
-    width: 50%;
-    margin: 0 auto;
-    font-family: Arial, sans-serif;
   }
   
   .Selection-section {
+
     display: flex;
     flex-direction: column;
-    
+    width: 500px;
+    max-width: 80%;
+    background-color: rgba(202, 194, 194, 0.5); /* transparent gray */
+  /* other styling for .Selection-section */
+  border-radius:20px;
+
+  }
+  
+  .select {
+    display: block;
+    width: 100%;
+    height: 40px;
+    padding: 10px;
+    font-size: 16px;
+    outline: 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
     margin-bottom: 20px;
   }
   
-  label.mount-option {
-    font-size: 35px;
-    margin-bottom: 10px;
-    margin-left:-40px;
-    
+  .mount-option {
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   
-  select {
-    width: 200px;
-    height: 35px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+  .winding {
     font-size: 16px;
-    outline: none;
+    font-weight: bold;
     margin-bottom: 10px;
-    padding: 6px 10px;
-    box-sizing: border-box;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
   }
   
-  select:hover,
-  select:focus {
-    border-color: #999;
-  }
-  
-  option {
+  .mount {
     font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 10px;
   }
   
+
+  .result {
+    /* Add some basic styling */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    height: 50px;
+    font-size: 20px;
+    color: white;
+    background-color: rgba(202, 194, 194, 0.5);
+    border-radius: 10px;
+  
+    /* Add the glowing effect */
+    box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.5);
+    animation: glowing .5s ease-in-out infinite alternate;
+  }
+  
+  /* Add the glowing animation */
+  @keyframes glowing {
+    from {
+      box-shadow: 0 0 10px 5px rgba(10, 158, 5, 0.5);
+    }
+    to {
+      box-shadow: 0 0 20px 10px rgba(128, 107, 107, 0);
+    }
+  }
