--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
 body {
   margin: 0;
-  background-image: url(./images/Kollmorgen.png);
+  /*background-image: url(./images/Kollmorgen.png);*/
+  animation: slideshow 90s infinite;
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 100vh;
   background-position: center center;
+
+
 
   font-family: Inter, sans-serif; /*-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -12,6 +15,26 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;*/
 }
+
+@keyframes slideshow {
+  0% {
+    background-image: url(./images/Kollmorgen.png);
+  }
+  25% {
+    background-image: url(https://www.kollmorgen.com/sites/default/files/2g-motion-system-brochure.jpg);
+  }
+  50% {
+    background-image: url(https://www.automation-fair.com/wp-content/uploads/24948_Kollmorgen-2G-Motion-System-AKD2G-Kollmorgen_AKM2G-Cable-1-scaled.jpg);
+  }
+  75% {
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTYyx27-RPUPi2fuBABCz4bDoQRwoDP6g2elA&usqp=CAU);
+  }
+  100% {
+    background-image: url(https://www.kollmorgen.com/sites/default/files/2g-motion-system-brochure.jpg);
+  }
+}
+
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
